better drop detection